--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,10 @@
 [user]
-	name = Hyeon Kim
-	email = simnalamburt@gmail.com
+	name = jaehakcho
+	email = whwogkra@naver.com
 [core]
 	editor = vim
 	excludesfile = ~/.gitexclude
+	autocrlf = input
 [color]
 	ui = auto
 [push]
@@ -11,11 +12,11 @@
 [credential]
 	helper = cache --timeout=3600
 [credential "https://github.com"]
-	username = simnalamburt
-[credential "http://git.hyeon.me"]
-	username = simnalamburt
-[credential "http://git.upnl.org"]
-	username = simnalamburt
+	username = jaehakcho
 [filter "media"]
 	clean = git-media-clean %f
 	smudge = git-media-smudge %f
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
