--- a/.ssh/config
+++ b/.ssh/config
@@ -1,35 +1,2 @@
-Host hyeon.me
-
-Host martini.snucse.org
-Host mimosa.snucse.org
-Host midori.snucse.org
-
-Host toor.snucse.org
-  User toor
-Host chundoong0.snu.ac.kr
-  User mc05
-
-Host upnl.org
-  User server
-Host wiki.upnl.org
-  User wiki
-Host uriel.upnl.org
-Host gemini.upnl.org
-Host edhelbroy.upnl.org
-  User root
-
-Host martini-admin
-  User martini
-  HostName martini.snucse.org
-Host mimosa-admin
-  User mimosa
-  HostName mimosa.snucse.org
-Host midori-admin
-  User midori
-  HostName midori.snucse.org
-
-Host tcs.snu.ac.kr
-  User cp201522
-
-Host *
-  User simnalamburt
+Host pnote.co.kr
+  User ec2-user
